# fundamental-algorithms

./: .gitignore  CMakeLists.txt  lab1.c
lab1/: array.c  array.h  error_handler.c  error_handler.h
lab1/arrays/: array.c  array.h
lab1/task1/: array.h  handlers.c  main.c  main.h
lab1/task10/: handlers.c  main.c  main.h
lab1/task2/: expressions.c  main.c  main.h  methods.c
lab1/task3/: handlers.c  main.c  main.h
lab1/task4/: handlers.c  main.c  main.h
lab1/task5/: main.c  main.h  methods.c
lab1/task6/: main.c  main.h  methods.c
lab1/task7/: handlers.c  main.c  main.h
lab1/task8/: handlers.c  main.c  main.h
lab1/task9/: handlers.c  main.c  main.h
lab2/task1/: handlers.c  main.c  main.h
lab2/task10/: main.c  main.h
lab2/task2/: handlers.c  main.c  main.h
lab2/task3/: handlers.c  main.c  main.h
lab2/task4/: handlers.c  main.c  main.h
lab2/task5/: handlers.c  main.c  main.h
lab2/task6/: handlers.c  main.c  main.h
lab2/task7/: expressions.c  main.c  main.h
lab2/task8/: main.c  main.h
lab2/task9/: main.c  main.h
lab3/task1/: main.c  main.h
lab3/task10/: main.c  main.h
lab3/task2/: main.c  main.h  vectorarray.c
lab3/task3/: main.c  main.h
lab3/task4/: dialog.c  inp  mail.c  mail.h  main.c  main.h  mystring.c  mystring.h
lab3/task5/: dialog.c  handlers.c  main.c  main.h  student.c
lab3/task6/: main.c
lab3/task7/: a  dialog.c  list.c  main.c  main.h  stack.c
lab3/task8/: a  adder.c  main.c  main.h  polynomial.c
lab3/task9/: a  dialog.c  list.c  main.c  main.h  tree.c
lab4/task1/: a  main.c  main.h  structures.c
lab4/task9/: heaps.c  heaps.h  input  main.c  main.h  support_app.c  support_app.h  ticket.h
lab4/task9/department_structures/: department.c  department.h  department_structure.h
lab4/task9/department_structures/bst/: bst.c  bst.h
lab4/task9/department_structures/dynamic_array/: dynamic_array.c  dynamic_array.h
lab4/task9/department_structures/hashset/: hashset.c  hashset.h
lab4/task9/department_structures/overload_heap/: overload_heap.c  overload_heap.h
lab4/task9/department_structures/trie/: trie.c  trie.h
lab4/task9/generating_apps/: aux1.c  aux2.c
lab4/task9/heaps/binary/: binary.c  binary.h
lab4/task9/heaps/binomial/: binomial.c  binomial.h
lab4/task9/heaps/fibonacci/: fibonacci.c  fibonacci.h
lab4/task9/heaps/leftist/: leftist.c  leftist.h
lab4/task9/heaps/skew/: skew.c  skew.h
lab4/task9/heaps/treap/: treap.c  treap.h
lab5/: CMakeLists.txt
lab5/task1/: classes.cpp  main.cpp  main.h
lab5/task2/: encoder.cpp  main.cpp  main.h
lab5/task3/: classes.cpp  main.cpp  main.h
lab5/task4/: complex.cpp  main.cpp  main.h
lab5/task6/: classes.cpp  main.cpp  main.h
lab5/task7/: classes.cpp  main.cpp  main.h
utility/: error_handler.c  error_handler.h  overio.c  overio.h
utility/arrays/: array.c  array.h  intarray.c  intarray.h
